added footer to portfolio

--- a/style.css
+++ b/style.css
@@ -31,9 +31,9 @@
 }
 
 .portfolioFooter {
-    position: relative;
+    position: absolute;
     right: 0;
-    bottom: 0;
+    bottom: -250px;
     left: 0;
     padding: 1rem;
     background-color: #4aaaa5;
