--- a/style.css
+++ b/style.css
@@ -100,6 +100,13 @@
     float: left;
 }
 
+.lastProject {
+    height: 300px;
+    width: 300px;
+    margin: 20px;
+    float: left;
+}
+
 #stocks {
     height: 300px;
     width: 300px;
